--- a/css/blog.css
+++ b/css/blog.css
@@ -6,3 +6,10 @@ body
     font-family:"Arial";
     
 }
+container
+{
+    width: 70;
+    padding: 1em;
+    text-align: left;
+    text-decoration-color: blue;
+}
